--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,4 +4,6 @@ deployment:
     - export DEPLOYPATH=/home/rivopelu/public_html/
     - /bin/cp index.html $DEPLOYPATH
     - /bin/cp -R css $DEPLOYPATH
-    - /bin/cp -R css $DEPLOYPATH
+    - /bin/cp -R js $DEPLOYPATH
+    - /bin/cp -R img $DEPLOYPATH
+    - /bin/cp -R pdf $DEPLOYPATH
