--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -7,3 +7,4 @@ deployment:
     - /bin/cp -R js $DEPLOYPATH
     - /bin/cp -R img $DEPLOYPATH
     - /bin/cp -R pdf $DEPLOYPATH
+    - /bin/cp -R halaman2 $DEPLOYPATH
